--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ loader_version_range=[4,)
 mod_id=realitymod
 mod_name=Reality Mod
 mod_license=MIT
-mod_version=0.0.1
+mod_version=0.0.1a-neo
 mod_group_id=net.foxirion.realitymod
 mod_authors=Foxirion
 mod_description=A minecraft mod that enhance the game with realistic stuff in a vanilla style, made by Foxirion.
